--- a/www/static/styles.css
+++ b/www/static/styles.css
@@ -32,6 +32,14 @@ input:focus {
     box-shadow: 0 0 0 .25rem #00000040
 }
 
+/* .btn:hover {
+    color: var(--bs-body-color);
+    background-color: var(--bs-body-bg);
+    border-color: gray;
+    outline: 0;
+    box-shadow: 0 0 0 .25rem #00000040
+} */
+
 #modal {
     display: none; 
     top: 100%; 
